v17.0.5 Overflow issue and scrollbars on new point and question wrap point-edit, question-edit inside overflow-hidden div inside scroller div

--- a/src/app/public/point-create-new/point-create-new.component.css
+++ b/src/app/public/point-create-new/point-create-new.component.css
@@ -1,5 +1,4 @@
 .container {
-  overflow: hidden; /* Unexpected scrollbars despite experimentation with width and height */
   padding: 20px;
 }
 
